cmake_minimum_required(VERSION 3.17)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(A_all_permulation   A_all_permulation.cpp)
add_executable(B_norecur_permulation   B_norecur_permulation.cpp )
add_executable(D_n_queen  D_n_queen.cpp )
add_executable(F_stack_sequencenum  F_stack_sequencenum.cpp )
add_executable(F_maze  F_maze.cpp )
