cmake_minimum_required(VERSION 3.17)
project(sort_codeup)

set(CMAKE_CXX_STANDARD 11)

add_executable(4-1-A 4-1-A.cpp)
add_executable(4-1-B 4-1-B.cpp)
add_executable(4-1-C 4-1-C.cpp)
add_executable(4-1-D 4-1-D.cpp)
add_executable(4-1-E 4-1-E.cpp)
add_executable(4-1-F 4-1-F-Mouse.cpp)
add_executable(4-1-G 4-1-G-middle.cpp)
add_executable(4-1-H 4-1-H.cpp)
add_executable(4-1-I 4-1-I.cpp)
